<resources>
    <string name="app_name">SCE</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login_btn">Login</string>
    <string name="title_activity_admin_navigation">AdminNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="living_city">Living City</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="nic">NIC</string>
    <string name="email_address">Email Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="courses">Courses</string>
    <string name="users_title">Users</string>
    <string name="profile_title">profile</string>
    <string name="add_new_course">Add New Course</string>
    <string name="title_activity_user_navigation">UserNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="course_due">Course Due</string>
    <string name="course_duration">Course Duration</string>
    <string name="bar"> | </string>
    <string name="course_fee">Course Fee</string>
    <string name="course_name">Course Name</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="branch_name">Branch Name</string>
    <string name="branch_code">Branch Code</string>
    <string name="select_location">Select Location</string>
    <string name="google_maps_key">AIzaSyDnWn91mupUBMC8N6Qcx21KBr9dfNLV4HE</string>
    <string name="enter_the_otp_sent_to_your_email">Enter the OTP sent to your email</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="add_new_branch">Add new Branch</string>
    <string name="enrollment">Enrollment</string>
    <string name="your_purchases">Your Purchases</string>
    <string name="email_new">Email</string>
</resources>