<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".screen.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/ash"
            android:textColor="@color/white"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textColorHint="@color/ash"
            android:textColor="@color/white"
            android:inputType="textPostalAddress"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/living_city"
            android:inputType="text"
            android:textColorHint="@color/ash"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            android:focusable="false"
            android:inputType="none"
            android:textColorHint="@color/ash"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etNic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nic"
            android:textColorHint="@color/ash"
            android:textColor="@color/white"
            android:inputType="text"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:textColorHint="@color/ash"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"/>

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/rbFemale"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>

            <RadioButton
                android:id="@+id/rbOther"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"/>
        </RadioGroup>

        <EditText

            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColorHint="@color/ash"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/ash"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:backgroundTint="@color/purple"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"/>
    </LinearLayout>
</ScrollView>
