<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sce.screen.ui.userHome.UserHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_user_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.sce.screen.ui.userProfile.UserProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/nav_enrollment"
        android:name="com.example.sce.screen.ui.userEnrollment.UserEnrollmentFragment"
        android:label="@string/enrollment"
        tools:layout="@layout/fragment_user_enrollment" />
</navigation>