<!-- res/layout/activity_new_branch.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_branch"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:textSize="19sp"/>

    <EditText
        android:id="@+id/etBranchCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/branch_code"
        android:textColor="@color/black"
        android:textColorHint="@color/ash"
        android:inputType="text" />

    <EditText
        android:id="@+id/etBranchName"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:hint="@string/branch_name"
        android:textColorHint="@color/ash"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button_select_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:textColor="@color/white"
        android:text="@string/select_location" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"
        android:text="Save"
        android:layout_marginTop="32dp" />
</LinearLayout>
