<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@drawable/rounded_background"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:id="@+id/userCourseLayout"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:id="@+id/textViewCourseName"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/course_name"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/textViewCourseFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/course_fee"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text=" | "
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewCourseDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/course_duration"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text=" | "
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewCourseStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/course_duration"
                android:textSize="14sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:textColor="#aa0000"
                android:id="@+id/textViewCourseDue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/course_due"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/location_new" />
</LinearLayout>
